Module 7 completed baseline

--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 16rem">
+<div class="card ml-4" style="width: 18rem;">
     <div class="card-header">{{ trip.name }}</div>
     <img src="assets/images/{{ trip.image }}"
         alt="trip thumbnail" class="card-img-top">
@@ -11,7 +11,7 @@
         </p>
         <p class="card-text" [innerHTML]="trip.description">                    
         </p>
-        <div>
+        <div *ngIf="isLoggedIn()">
             <button (click)="editTrip(trip)" class="btn btn-info">Edit Trip</button>
         </div>
     </div>
